# bostPit

./: .env  README.md  pyproject.toml
bostPit/src/bostpit.egg-info/: top_level.txt
bostPit/src/controller/: incidenciasCtrl.py
bostPit/src/views/: inicioView.py  objetosView.py  tiendaView.py
database/: bostPit.sql
src/: main.py
src/bostpit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/controller/: clubesCtrl.py  incidenciasCtrl.py  objetosCtrl.py  sugerenciasCtrl.py  tiendaCtrl.py
src/models/: database.py  incidenciasModel.py  sugerenciasModel.py  tiendaModel.py
src/views/: clubesView.py  incidenciasView.py  inicioView.py  sugerenciasView.py
