[project]
name = "bostpit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "flet>=0.85.0",
    "mysql-connector-python>=9.7.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
app = "main:main"

[tool.uv]
package = true

[tool.setuptools.package-dir]
"" = "src"